# godwoken-polyjuice

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Makefile  README.md  build.rs  generator.c  gw_def.h  polyjuice-generator.c  polyjuice.h
.github/workflows/: ci.yml  fuzz.yml
c/: contracts.h  eth_addr_reg.c  generator.c  gw_def.h  gw_dlfcn.h  other_contracts.h  polyjuice.h  polyjuice.mol  polyjuice_errors.h  polyjuice_globals.h  polyjuice_utils.h  sudt_contracts.h  validator.c
c/generator/: contracts.h  polyjuice.h  secp256k1_helper.h
c/tests/: test_contracts.c  test_rlp.c
c/validator/: secp256k1_helper.h  validator.h
devtools/ci/: integration-test.sh  meta-contract-generator  meta-contract-validator  sudt-generator  sudt-validator
docs/: Addition-Features.md  EVM-compatible.md  godwoken-l2-api.c  godwoken-l2-api.md
polyjuice-tests/: Cargo.toml
polyjuice-tests/benches/: bench_main.rs
polyjuice-tests/benches/benchmarks/: deploy_contract.rs  mod.rs  polyjuice_generator.rs  setup.rs
polyjuice-tests/fuzz/: .gitignore  Cargo.toml  Makefile  README.md  ckb_syscalls.h  mock_generator_utils.h  mock_godwoken.hpp  polyjuice_fuzzer.cc  polyjuice_generator_fuzzer.cc
polyjuice-tests/fuzz/corpus/: raw_tx
polyjuice-tests/fuzz/fuzz_targets/: polyjuice.rs
polyjuice-tests/fuzz2/: Makefile  ckb_syscalls.h  polyjuice_fuzzer.cc
polyjuice-tests/src/: ctx.rs  helper.rs  lib.rs  main.rs
polyjuice-tests/src/test_cases/: absent_address.rs  account_already_exists.rs  address.rs  address_collision.rs  beacon_proxy.rs  call_multiple_times.rs  call_selfdestruct.rs  contract_call_contract.rs  contract_create_contract.rs  create2.rs  delegatecall.rs  ecrecover.rs  eoa_transfer.rs  erc20.rs  error.rs  eth_addr_reg.rs  eth_addr_to_gw_script_hash.rs  eth_addr_to_gw_short_script_hash.rs  eth_to_godwoken_addr.rs  eth_to_polyjuice_address.rs  fallback_function.rs  gas_price.rs  get_block_info.rs  get_chain_id.rs  heap_memory.rs  invalid_sudt_erc20_proxy.rs  metamask_transactions.rs  mod.rs  multicall3.rs  native_token_transfer.rs  parse_log_event.rs  pre_compiled_contracts.rs  receive_ether.rs  recover_account.rs  recursion_contract.rs  revert.rs  rlp.rs  selfdestruct.rs  simple_storage.rs  simple_transfer.rs  (+4 more)
polyjuice-tests/src/test_cases/evm-contracts/: AddressType.sol  AttackSudtERC20Proxy.sol  BlockInfo.sol  CallNonExistsContract.sol  Create2.sol  EthToGodwokenAddr.abi  EthToGodwokenAddr.sol  EthToPolyjuiceAddress.abi  EthToPolyjuiceAddress.sol  PreCompiledContracts.sol  RecoverAccount.sol  SimpleStorage.sol
polyjuice-tests/src/test_cases/evm-contracts/revert/: CallRevertWithTryCatch.json  CallRevertWithTryCatchInConstructor.json  CallRevertWithTryCatchInDepth.json  CallRevertWithoutTryCatch.json  DebugAAA.abi  DebugAAA.json  DebugBBB.json  DebugCCC.json  NormalRevert.json  Revert.json  contracts.sol
polyjuice-tests/src/tools/: main.rs
polyjuice-tests/tests/: ethereum_test.rs
solidity/erc20/: ERC20.sol  README.md  SudtERC20Proxy.abi  SudtERC20Proxy.sol  SudtERC20Proxy_UserDefinedDecimals.ContractCode.hex  SudtERC20Proxy_UserDefinedDecimals.abi  SudtERC20Proxy_UserDefinedDecimals.sol
src/: lib.rs
