[package]
name = "polyjuice-tests"
version = "0.2.0"
authors = ["Linfeng Qian <thewawar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gw-types = { path = "../integration-test/godwoken/crates/types" }
gw-common = { path = "../integration-test/godwoken/crates/common" }
gw-db = { path = "../integration-test/godwoken/crates/db" }
gw-store = { path = "../integration-test/godwoken/crates/store" }
gw-config = { path = "../integration-test/godwoken/crates/config" }
gw-traits = { path = "../integration-test/godwoken/crates/traits" }

gw-generator = { path = "../integration-test/godwoken/crates/generator", features = ["aot"]}
ckb-vm = { version = "=0.20.0-rc5", features = ["detect-asm"] }

lazy_static = "1.4"
tiny-keccak = "1.4"
rlp = "0.5.0"
hex = "0.4.2"
env_logger = "0.8.3"

# ethabi = "14.0.0"
# rand = "0.7.3"
# blake2b-rs = "0.2"
# serde_json = "1.0"
